<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="35dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="40dp"
        android:text="@string/invisibilityTitle" />

    <ToggleButton
        android:id="@+id/visibilityBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView1"
        android:layout_alignBottom="@+id/textView1"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:checked="true"
        android:textOff="@string/visibleBtnOff"
        android:textOn="@string/visibleBtnOn" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_alignStart="@+id/textView1"
        android:layout_below="@+id/visibilityBtn"
        android:layout_marginTop="40dp"
        android:text="@string/distance" />

    <Spinner
        android:id="@+id/distanceBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/visibilityBtn"
        android:layout_alignStart="@+id/visibilityBtn"
        android:layout_alignTop="@+id/textView2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/distanceBtn"
        android:layout_marginTop="17dp"
        android:text="@string/saveIds" />

    <ToggleButton
        android:id="@+id/saveIdsBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView3"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignLeft="@+id/distanceBtn"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:checked="false"
        android:textOff="@string/visibleBtnOff"
        android:textOn="@string/visibleBtnOn" />

    <Button
        android:id="@+id/mapTypeBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignRight="@+id/saveIdsBtn"
        android:layout_below="@+id/saveIdsBtn"
        android:layout_marginTop="38dp"
        android:background="@drawable/buttonshape"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/mapTypes"
        android:textColor="#FFFFFF" />

</RelativeLayout>